<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/login_logo"
        android:scaleType="fitXY"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_signIn"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:id="@+id/textSignIn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"


        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_welcome"
        android:text="@string/text_welcom"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@id/text_in_or_up"
        app:layout_constraintStart_toStartOf="@id/textSignIn"
        app:layout_constraintEnd_toEndOf="@id/textSignIn"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_in_or_up"
        android:text="@string/in_or_up"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/text_welcome"
        app:layout_constraintEnd_toEndOf="@id/text_welcome"
        />
    <EditText
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:id="@+id/emailText"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="50dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_editTxt"
        android:textAlignment="textStart"
        android:background="@drawable/rounded_teg"
        app:layout_constraintTop_toBottomOf="@id/text_in_or_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <EditText
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:id="@+id/password"
        android:hint="@string/password_editTxt"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:layout_marginTop="20dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp"
        android:background="@drawable/rounded_teg"
        app:layout_constraintTop_toBottomOf="@id/emailText"
        app:layout_constraintStart_toStartOf="@id/emailText"
        />
    <Button
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:id="@+id/button"
        android:text="@string/sign_in_button"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:onClick="sendMessage"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/gray"
        android:background="@drawable/rounded_teg"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintEnd_toEndOf="@id/password"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_forgot_password"
        android:text="@string/forgot_password"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:onClick="forgotPassword"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintStart_toStartOf="@id/text_welcome"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_click_here"
        android:text="@string/click_here"
        android:autoLink="all"
        android:textColor="@color/orange"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintStart_toEndOf="@id/text_forgot_password"
        />

</androidx.constraintlayout.widget.ConstraintLayout>